Спринт6, сделать историю в InMemoryHistoryManager неограниченной, убрать повторные просмотры в истории